[package]
name = "esplora-api"
version = "0.1.0"
authors = ["Vivienbcr <vivienbcr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", default-features = true, optional = true, features = ["json","blocking"] }
serde = { version = "1.0.117", features = ["derive"] }

[dev-dependencies]
tokio = { version = "0.2.5", features = [ "rt-threaded","macros","test-util"] }

[features]
default = [ "reqwest" , "reqwest/default"]
blocking = ["reqwest" , "reqwest/blocking"]

[[test]]
name = "blocking"
path = "tests/blocking_impl_tests.rs"
required-features = ["blocking"]